Added custom user registration endpoint
