# src/routes/handlers/Users.cs
@@ -21,12 +21,15 @@ public static class Users {
 	/// <param name="id">ID of the User</param>
 	/// <param name="db"></param>
 	/// <returns><see cref="Ok"/> if user got deleted, else a <see cref="ProblemHttpResult"/> containing error details.</returns>
-	public static Results<Ok, ProblemHttpResult, NotFound> DeleteUser(string id, CleancontrolContext db,UserManager<CleanControlUser> userManager) {
+	public static Results<Ok, ProblemHttpResult, NotFound>
+		DeleteUser(string id, CleancontrolContext db, UserManager<CleanControlUser> userManager) {
 		var dbUser = db.Users.Find(id);
 		if (dbUser is null)
 			return TypedResults.Problem($"User with ID {id} not found", statusCode: StatusCodes.Status404NotFound);
 
-		userManager.DeleteAsync(dbUser).Wait();
+		userManager
+		   .DeleteAsync(dbUser)
+		   .Wait();
 
 		db.SaveChanges();
 		return TypedResults.Ok();
@@ -78,7 +81,7 @@ public static class Users {
 	/// <param name="dbUser">User, for which the role should be returned.</param>
 	/// <param name="userManager"></param>
 	/// <returns>Role of the user.</returns>
-	private static async Task<Role> GetRoleForUser(CleanControlUser dbUser,UserManager<CleanControlUser> userManager) {
+	private static async Task<Role> GetRoleForUser(CleanControlUser dbUser, UserManager<CleanControlUser> userManager) {
 		var role = (await userManager.GetRolesAsync(dbUser)).First();
 		return Enum.Parse<Role>(role);
 	}
@@ -91,14 +94,19 @@ public static class Users {
 	/// <param name="userManager"></param>
 	/// <param name="context"></param>
 	/// <returns><see cref="Ok{User}"/> with the user data, else a <see cref="ProblemHttpResult"/> containing error details.</returns>
-	public static async Task<Results<Ok<User>, ProblemHttpResult ,NotFound, ForbidHttpResult>> GetUser(string id, CleancontrolContext db, UserManager<CleanControlUser> userManager, HttpContext context) {
+	public static async Task<Results<Ok<User>, ProblemHttpResult, NotFound, ForbidHttpResult>> GetUser(
+		string id
+	  , CleancontrolContext db
+	  , UserManager<CleanControlUser> userManager
+	  , HttpContext context
+	) {
 		var dbUser = await db.Users.FindAsync(id);
 		if (dbUser is null)
 			return TypedResults.Problem($"User with ID {id} not found", statusCode: StatusCodes.Status404NotFound);
 
 		var currentUser = await userManager.GetUserAsync(context.User);
 
-		if(currentUser!.Id != dbUser.Id && await  userManager.IsInRoleAsync(currentUser, Role.Admin.ToString()))
+		if (currentUser!.Id != dbUser.Id && await userManager.IsInRoleAsync(currentUser, Role.Admin.ToString()))
 			return TypedResults.Forbid();
 
 		var user = await GetReturnUser(userManager, dbUser);
@@ -110,7 +118,10 @@ public static class Users {
 			dbUser.Id
 		  , dbUser.Name
 		  , dbUser.Email
-		  , await GetRoleForUser( dbUser, userManager)
+		  , await GetRoleForUser(
+								 dbUser
+							   , userManager
+								)
 		  , dbUser.IsAdUser
 		   );
 
@@ -122,16 +133,50 @@ public static class Users {
 	/// <returns><see cref="Ok{IEnumerable}"/> containing all user data. Passwords are omitted.</returns>
 	public static Ok<IEnumerable<User>> GetAllUsers(CleancontrolContext db, UserManager<CleanControlUser> userManager) {
 		var dbUsers = db.Users;
-		var users = dbUsers.ToImmutableArray().Select(
-								   u => new User(
-												 u.Id
-											   , u.Name
-											   , u.Email
-											   , GetRoleForUser(u, userManager)
-													.Result
-											   , u.IsAdUser
-												)
-								  );
+		var users = dbUsers
+				   .ToImmutableArray()
+				   .Select(
+						   u => new User(
+										 u.Id
+									   , u.Name
+									   , u.Email
+									   , GetRoleForUser(u, userManager)
+											.Result
+									   , u.IsAdUser
+										)
+						  );
 		return TypedResults.Ok(users.AsEnumerable());
+	}
+
+	public static async Task<Results<CreatedAtRoute<User>, Ok>> CreateUser(User user
+																		 , CleancontrolContext db
+																		 , UserManager<CleanControlUser> userManager
+	) {
+		var dbUser = new CleanControlUser {
+			UserName = user.email
+		  , Email = user.email
+		  , Name = user.name
+		  , IsAdUser = user.isAdUser!.Value
+		};
+
+		await userManager.CreateAsync(dbUser, user.password!);
+
+		var role = user.role.ToString()!;
+		await userManager.AddToRoleAsync(dbUser, role);
+		var newRole = Enum.Parse<Role>((await userManager.GetRolesAsync(dbUser)).First());
+
+		var returnUser = new User(
+								  dbUser.Id
+								, dbUser.Name
+								, dbUser.Email
+								, newRole
+								, dbUser.IsAdUser
+								 );
+
+		return TypedResults.CreatedAtRoute(
+										   returnUser
+										 , "GetUserById"
+										 , new { userId = dbUser.Id }
+										  );
 	}
 }
